metadata/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Number__c</fullName>
        <description>The application number associated with the applicant.</description>
        <displayFormat>AN-{0000}</displayFormat>
        <inlineHelpText>Starting with 1.</inlineHelpText>
        <label>Applicant Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>The type of food business associated with the applicant.</description>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>RESTAURANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAKERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE FOOD VENDOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The applicant&apos;s location.</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>MANHATTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QUEENS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROOKLYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRONX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STATEN ISLAND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>The phone number of the applicant.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>